--- a/celular/templates/admin/laboratory.html
+++ b/celular/templates/admin/laboratory.html
@@ -24,7 +24,7 @@
         </div>
 
         <button type="submit" class="btn btn-primary">Salvar Alterações</button>
-        <a href="{{ url_for('admin_dashboard') }}" class="btn btn-secondary">Cancelar</a>
+        <a href="{{ url_for('celular.admin_dashboard') }}" class="btn btn-secondary">Cancelar</a>
     </form>
 </div>
 {% endblock %}
