--- a/celular/templates/admin/login.html
+++ b/celular/templates/admin/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Painel Administrativo</title>
-    <link rel="icon" type="image/png" href="{{ url_for('static', filename='images/favicon.png') }}">
+    <link rel="icon" type="image/png" href="{{ url_for('celular.static', filename='images/favicon.png') }}">
     <style>
         * {
             margin: 0;
@@ -129,7 +129,7 @@
         </form>
 
         <div class="back-link">
-            <a href="{{ url_for('index') }}">← Voltar ao site</a>
+            <a href="{{ url_for('celular.index') }}">← Voltar ao site</a>
         </div>
     </div>
 </body>
