--- a/celular/templates/admin/password.html
+++ b/celular/templates/admin/password.html
@@ -15,7 +15,7 @@
         </div>
 
         <button type="submit" class="btn btn-primary">Alterar Senha</button>
-        <a href="{{ url_for('admin_dashboard') }}" class="btn btn-secondary">Cancelar</a>
+        <a href="{{ url_for('celular.admin_dashboard') }}" class="btn btn-secondary">Cancelar</a>
     </form>
 </div>
 {% endblock %}
